--- a/config/config.env
+++ b/config/config.env
@@ -3,5 +3,5 @@ brokerUname="aws"
 brokerPassword="Rnd_AEDSS2023"
 subTopic="scheduler/server"
 pubTopic="schduler/noti"
-requestRoomDevice ="http://localhost:5500/api/v1/room/device/"
-requestSchedule = "http://localhost:5500/api/v1/schedules/"
+requestRoomDevice ="http://rndaedss.ddns.net/api/v1/room/device/"
+requestSchedule = "http://rndaedss.ddns.net/api/v1/schedules/"
