--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.3.3",
     "dotenv": "^16.0.3",
+    "jsonwebtoken": "^9.0.0",
     "mqtt": "^4.3.7",
     "node-cron": "^3.0.2"
   }
